# opdeck

./: .gitignore  LICENSE  README.md  electron.vite.config.ts  install.sh  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agents.rs  commands.rs  fsops.rs  fswatch.rs  github.rs  gitops.rs  hooks.rs  lib.rs  pty.rs  state.rs  tracker.rs  types.rs  usage.rs
src/main/: agents.ts  git.ts  index.ts  ipc.ts  pty.ts  store.ts
src/preload/: index.ts
src/renderer/: index.html
src/renderer/src/: App.tsx  ErrorBoundary.tsx  api.d.ts  main.tsx  store.ts  tauri-bridge.ts  vite-env.d.ts
src/renderer/src/components/: AddSessionForm.tsx  Backlog.tsx  ChangesList.tsx  CliLimits.tsx  CommandPalette.css  CommandPalette.tsx  CustomCliForm.tsx  DiffFolderHint.tsx  EditableName.tsx  EditorPane.css  EditorPane.tsx  FileTree.css  FileTree.tsx  LayoutThumb.tsx  Logo.tsx  MergeControls.tsx  NewWorkspaceModal.tsx  Overview.tsx  PanelGrid.tsx  Review.css  Review.tsx  SessionInspector.css  SessionInspector.tsx  Settings.tsx  ShortcutsModal.tsx  Sidebar.tsx  TerminalPane.tsx  Titlebar.tsx  Toasts.tsx  WorkspaceArea.css  WorkspaceArea.tsx  layouts.ts
src/renderer/src/styles/: index.css
src/shared/: types.ts
