[package]
name = "app"
version = "0.1.1"
description = "opdeck — пульт управления сессиями ИИ-агентов"
authors = ["danila"]
license = "MIT"
repository = "https://github.com/222dotcrypto/opdeck"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = ["macos-private-api", "protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
portable-pty = "0.8"
notify = "6"
trash = "5"
dirs = "5"
base64 = "0.22"
tiny_http = "0.12"
urlencoding = "2"
# C1/C2/C4/C5 (аудит 2026-06-17): POSIX-экранирование argv при сборке команды для login-shell
# (запуск агента без интерпретации шелл-метасимволов в extra_args/resume_id/флагах доверия).
shlex = "2"
# M2 (аудит 2026-06-17): CSPRNG для токена приёмника хуков (вместо предсказуемых наносекунд).
getrandom = "0.2"
